[package]
name = "audio_arena"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "audio_lib", "audio_player"]

[dependencies]
audio_lib = { path = "./audio_lib" }
audio_player = { path = "./audio_player" }
druid = "0.8.3"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
env_logger = "0.11.8"
im = "15.1.0"
log = "0.4.27"
rand = "0.9.1"
rfd = "0.15.3"
serde = "1.0.219"
